Downgrade to compatibility with Java8 APIs
  + Replace Map.of initialization with ImmutableMap.of
  + Replace List.of initialization with ImmutableList.of
  + Replace Optional.isEmpty() with !Optional.isPresent()
  + Qualify type parameters for anonymous class overrides