@@ -10,6 +10,7 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import java.util.Map;
@@ -55,7 +56,7 @@ class CreateBitbucketProjectWorkerTest {
         properties.setPassword("some-password");
         properties.setTeamName("some-team-name");
 
-        Map<String, Object> responseDto = Map.of(
+        Map<String, Object> responseDto = ImmutableMap.of(
             "name", "Some Project Name!",
             "key", "PROJECT-KEY",
             "is_private", false
@@ -71,7 +72,7 @@ class CreateBitbucketProjectWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "Some Project Name!");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "Some Project Name!");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
@@ -96,7 +97,7 @@ class CreateBitbucketProjectWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of(
+        Map<String, Object> inputData = ImmutableMap.of(
             "projectName", "Some Project Name!",
             "dryRun", "true"
         );
