@@ -9,6 +9,7 @@ import static org.springframework.test.web.client.response.MockRestResponseCreat
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import io.pivotal.conductor.worker.github.CreateGitHubRepositoryWorker.CreateRepositoryRequestDto;
@@ -63,7 +64,7 @@ class CreateGitHubRepositoryWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "Some Repository Name!");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "Some Repository Name!");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
@@ -82,7 +83,7 @@ class CreateGitHubRepositoryWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of(
+        Map<String, Object> inputData = ImmutableMap.of(
             "projectName", "Some Repository Name!",
             "dryRun", "true"
         );
