@@ -7,6 +7,7 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withNoContent;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import java.util.Map;
@@ -48,7 +49,7 @@ class DeleteGitHubRepositoryWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "Some Repository Name!");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "Some Repository Name!");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
@@ -66,7 +67,7 @@ class DeleteGitHubRepositoryWorkerTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of(
+        Map<String, Object> inputData = ImmutableMap.of(
             "projectName", "Some Repository Name!",
             "dryRun", "true"
         );
