@@ -8,6 +8,7 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import io.pivotal.conductor.worker.github.CreateGitHubRepositoryWorker.CreateRepositoryResponseDto;
@@ -85,7 +86,7 @@ class GitHubTokenAuthenticationInterceptorTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "Some Repository Name!");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "Some Repository Name!");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
