@@ -6,6 +6,7 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withStatus;
 
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import java.net.URI;
@@ -82,7 +83,7 @@ class JiraBasicAuthenticationInterceptorTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "some-project-name");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "some-project-name");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
