@@ -8,6 +8,7 @@ import static org.springframework.test.web.client.match.MockRestRequestMatchers.
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.requestTo;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.withSuccess;
 
+import com.google.common.collect.ImmutableMap;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.TaskResult;
 import java.io.IOException;
@@ -93,7 +94,7 @@ class TrackerTokenAuthenticationInterceptorTest {
 
         Task task = new Task();
         task.setStatus(Task.Status.SCHEDULED);
-        Map<String, Object> inputData = Map.of("projectName", "some-project-name");
+        Map<String, Object> inputData = ImmutableMap.of("projectName", "some-project-name");
         task.setInputData(inputData);
 
         TaskResult taskResult = worker.execute(task);
